# mechababs

./: .gitignore  CLAUDE.md  CONTRIBUTORS.md  LICENSE  README.md  SPEC.md  SPOKE_CONTEXT.md  STATE.md  TRIAGE.md  babs_automation_gaps.md  bootstrap.sh  candidates.tsv  cluster-setup.py  execute-dataset.sh  finalize.sh  init-campaign.py  june-1-fmriprep-deployment.sh  merge_config.py  pipeline-of-one-context.md  preflight.py  priority-openneuro-datasets.csv  pyproject.toml  requirements-campaign.txt  run-e2e.sh  select-eligible-sub-ses.py  select-fmriprep-targets.py  setup-dev.sh  sniff.sh  spawn-all.sh  tmp-repronim-container-shim.sh  tmp-test-candidates.csv  update_candidates.py
.github/ISSUE_TEMPLATE/: dataset.md  task.md
clusters/: dartmouth.yaml  test-docker.yaml  unity.yaml
deployments/june-1-fmriprep/: 0-init.sh  1-anat.sh  2-merge.sh  3-minimal.sh  4-merge.sh  5-clone.sh  6-get.sh  7-unzip.sh  8-fail-report.sh  CONTEXT.md  README.md  ledger.py  lib.sh  reset.sh  status.sh
design/: Makefile  diagrams.md  initial_implementation_plan.md  openneuro-findings.md  parallel-datasets-afterany-finalize.md  parallel-datasets-tmux.md
docs/: TODO.md  cluster-config-and-testing-tutorial.md  installation.md  interventions.md  logan-demo.md  output_structure.md  overview.md  reference.md
ideas/: VISION-SPEC.md  bash-wrapper-spec.md  diagrams.md
issues/: first-milestone.md
june-2-triage/: CLAUDE.md  ISSUES.md  JUNE-3-STARTER.md  NOTES.md  TRIAGE.md  TRIAGE_PLAN.md
logs/: ds002685-mriqcinfo.json
mechababs/: __init__.py  babs_status.py  cli.py  construct.py  guard.py  iterate.py  retire.py  scope.py  select.py  state.py  status.py  utils.py
pipelines/: MRIQC-24.0.2.yaml  SimBIDS-0.0.3+chain.yaml  SimBIDS-0.0.3.yaml  fMRIPrep-25.2.5+anat.yaml  fMRIPrep-25.2.5+full.yaml  fMRIPrep-25.2.5+minimal.yaml  fMRIPrep-25.2.5+resampling.yaml  fmriprep-25.2.5.yaml  fmriprep-anat-25.2.5.yaml  fmriprep-base-25.2.5.yaml  fmriprep-full-25.2.5.yaml  fmriprep-minimal-25.2.5.yaml  fmriprep-resampling-25.2.5.yaml  mriqc-24.0.2.yaml  simbids-0.0.3.yaml  simbids-nozip-0.0.3.yaml
tests/: conftest.py  test_babs_status.py  test_construct.py  test_guard.py  test_iterate.py  test_select.py
(+153 files in other folders)
